# Complianceiq

./: .cursorrules  .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.api  FINSIGHT_MASTER_PROMPT.md  Makefile  README.md  docker-compose.hf.yml  docker-compose.yml  pyproject.toml
airflow/dags/: alert_dispatch.py  causal_estimation.py  change_detection.py  embed_and_index.py  evaluate_pipeline.py  fetch_federal_register.py  graph_update.py  impact_agent.py  ingest_sources.py  model_registry.py
api/: main.py  seed.py  websockets.py
api/routes/: __init__.py  causal.py  change_scores.py  graph.py  health.py  refresh.py  regulations.py  reports.py
api/static/: index.html
backend/agents/: impact_agent.py
backend/models/: bayesian_network.py  causal_inference.py  change_detection.py  graph_model.py
backend/pipelines/: embedding.py  evaluation.py  ingestion.py  seed.py  seed_bulk.py
db/: __init__.py  models.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py  0002_evaluation_tables.py
deployment/: start.sh
docs/: math_explainer.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CIBar.jsx  ScoreBadge.jsx
frontend/src/hooks/: useApi.js
frontend/src/pages/: Alerts.jsx  Causal.jsx  Graph.jsx  RegulatoryFeed.jsx  Reports.jsx
tests/models/: test_causal_inference.py  test_change_detection.py  test_graph_model.py
tests/pipelines/: test_embedding.py  test_evaluation.py  test_ingestion.py
