[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "complianceiq"
version = "0.1.0"
description = "Regulatory Intelligence Platform — automated compliance analysis with causal inference"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "apache-airflow==2.9.3",
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-redis",
    "celery[redis]>=5.3",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    # Database
    "sqlalchemy>=1.4,<2.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Vector store
    "chromadb>=0.5.0",
    # ML / Graph
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "networkx>=3.3",
    "pgmpy>=0.1.25",
    "econml>=0.15.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # NLP
    "tiktoken>=0.7.0",
    # LangGraph
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # MLflow
    "mlflow>=2.13.0",
    # Evaluation
    "ragas>=0.1.10",
    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # for TestClient
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.hatch.build.targets.wheel]
packages = ["backend", "api", "db"]
